--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -21,7 +21,7 @@
             <div id="links" class="w3-bar w3-white">
                 <a href="register.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a>
                 <a href="SettingsPage.html" class="w3-bar-item w3-button w3-padding-16">Settings<i id="nav-icon" class="glyphicon glyphicon-user"></i></a>
-                <a href="statistics.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a>
+                <a href="neoStats.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a>
             </div> <!-- end of links div -->
 
         </div> <!-- end of mySidebar div -->
@@ -30,7 +30,7 @@
 
         <div id="topBar">
             <button id="topBar-button" class="w3-button w3-xlarge">&#9776;</button>
-            <img src="optum1.jpg" alt="optum">
+            <img src="img/optum1.jpg" alt="optum">
         </div> <!-- end of topBar div -->
 
         <div id="mainContent">
@@ -45,7 +45,7 @@
 
                         <div id = "wrapper">
                             <button id = "button-close">X</button>
-                            <img src="optum.png" alt="optum"><br>
+                            <img src="img/optum.png" alt="optum"><br>
                             <h1>Action Registration</h1>
                         </div> <!-- end of wrapper div -->
                         <hr>
