--- a/backend/SampleConnection/connect.html
+++ b/backend/SampleConnection/connect.html
@@ -4,7 +4,7 @@
     </style>
   </head>
   <body>
-    <script  src="./backend/SampleConnection/jquery.js" type="text/javascript"></script>
+    <script  src="/var/app/current/jquery.js" type="text/javascript"></script>
     <h1>TIME TO TEST THIS CONNECTION</h1>
     <h2>These are my list of friends</h2>
     <ul id = "friends">
