--- a/dashboard/dayDash.html
+++ b/dashboard/dayDash.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src = "jquery.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+  
 
   <style>
   @import "http://fonts.googleapis.com/css?family=Raleway";
@@ -19,7 +18,7 @@
     background-color: silver;
     margin-left: 1%;
     margin-right: 1%;
-    margin-top: 3.5%;
+    margin-top: 3.5%;Fph
 
   }
 
