--- a/frontend/swag/register.html
+++ b/frontend/swag/register.html
@@ -119,7 +119,7 @@
       <p style = "margin-left: 35%; color: #ffffff; font-size: 24px;">assign nfc to patient</p>
       <select id = "dropNFC" style = "margin-left: 47%;">
       </select></br>
-      <button id = "submitTheNFC" onclick="div_hide()" style = "margin-top: 2%;margin-left: 46%;">submit</button>
+      <button id = "submitTheNFC" style = "margin-top: 2%;margin-left: 46%;">submit</button>
     </div>
      </div>
 
@@ -305,7 +305,7 @@ div>
 <!-- The following div is the window that pops out...it includes the optum logo and the graphic picture which are right next to each other.-->
 <div id = "newWindow" class = "animated zoomIn">
   <div id = "wrapper">
-    <button id = "button-close" onclick ="hide_appt()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
+    <button id = "button-close" onclick ="hide_apptx()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
     <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
     <h1 style = "color: #ffffff; text-align: center;">new appointment</h1>
 
@@ -412,7 +412,7 @@ div>
 </div>
 <br/>
   <div>
-  <button id="create_appointment" onclick="hide_appt()" style="background-color: green; color: white; border-radius: 20%;margin-left: 42%; width: 140px; height:50px;" class="input-box">create appointment</button>
+  <button id="create_appointment" style="background-color: green; color: white; border-radius: 20%;margin-left: 42%; width: 140px; height:50px;" class="input-box">create appointment</button>
 </div>
   <br/>
 </div>
@@ -641,7 +641,8 @@ $('#create_appointment').click(function() {
         +appointment_patient_id +'/' +appointment_appointment_type_id +'/' +appointment_status_id +'/' +appointment_date + '/' +expected_start_time,
         success: function (insert_status) {
             $("#insert_status").append("Successful Insertion of Appointment</br>");
-            alert("appointment successfully added to schedule");
+            hide_appt();
+            //alert("appointment successfully added to schedule");
         },
         error: function (xhr, status, error) {
             console.log('Error: ' + error.message);
@@ -678,8 +679,9 @@ $('#submitTheNFC').click(function()
       success: function (insert_status)
       {
           console.log("SUCCESS!!!");
-          alert("The patient has officially been signed in!"); //Alert the user that the connection has been successful.
-          div_hide2(); //Close the window
+
+          div_hide(); //Close the window
+          //alert("The patient has officially been signed in!"); //Alert the user that the connection has been successful.
       },
       error: function (xhr, status, error) {
           console.log('Error: ' + error.message);
@@ -794,7 +796,7 @@ $.ajax({
     url: "http://optumistics-dev.us-east-1.elasticbeanstalk.com/general/insert/ActivatedNFC_Provider/" +activatednfc_provider_id +'/10/' +activatednfc_provider_nfc_id,
     success: function (insert_status) {
         $("#insert_status").append("Successful Insertion of Acitvated Provider NFC</br>");
-        alert("Provider successfully assigned NFC");
+        //alert("Provider successfully assigned NFC");
         hide_nfc();
     },
     error: function (xhr, status, error) {
@@ -874,8 +876,14 @@ function show_appt() {
 document.getElementById('abc4').style.display = "block";
 }
 //Function to Hide Popup
+function hide_apptx(){
+document.getElementById('abc4').style.display = "none";
+}
+
+//Function to Hide Popup
 function hide_appt(){
 document.getElementById('abc4').style.display = "none";
+window.location.reload();
 }
 
 //Function To Display Popup
