--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -2,7 +2,7 @@
 <head>
   <!-- The following scripts are different libraries used-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="backend/SampleConnection/jquery" type="text/javascript"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
