--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-  <link rel="stylesheet" href="css/stats.css">
+  <link rel="stylesheet" href="data_portal/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -34,7 +34,7 @@
 
     <div id = "topBar">
       <button class="w3-button w3-xlarge" onclick="w3_open()">&#9776;</button>
-      <img src="img/optum1.jpg" alt="optum" style="width:250px;height:80px;">
+      <img src="data_portal/optumImg" alt="optum" style="width:250px;height:80px;">
     </div>
 
 
@@ -129,6 +129,6 @@
 
     </div><br/>
   </div>
-  <script type="text/javascript" src="js/stats.js"></script>
+  <script type="text/javascript" src="data_portal/js"></script>
   </body>
   </html>
