--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -2,7 +2,7 @@
 <head>
   <!-- The following scripts are different libraries used-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
-  <script src="backend/SampleConnection/jquery" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-  <link rel="stylesheet" href="data_portal/css">
+  <link rel="stylesheet" href="css/stats.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -34,7 +34,7 @@
 
     <div id = "topBar">
       <button class="w3-button w3-xlarge" onclick="w3_open()">&#9776;</button>
-      <img src="data_portal/optumImg" alt="optum" style="width:250px;height:80px;">
+      <img src="img/optum1.jpg" alt="optum" style="width:250px;height:80px;">
     </div>
 
 
@@ -129,6 +129,6 @@
 
     </div><br/>
   </div>
-  <script type="text/javascript" src="data_portal/js"></script>
+  <script type="text/javascript" src="js/stats.js"></script>
   </body>
   </html>
