gotta push this

--- a/dashboard/dayDash.html
+++ b/dashboard/dayDash.html
@@ -3,7 +3,7 @@
   <script src = "jquery.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-  
+
 
   <style>
   @import "http://fonts.googleapis.com/css?family=Raleway";
@@ -102,7 +102,7 @@
       <div id="myNav" class="overlay">
 
         <div class="overlay-content">
-          <button style = "margin-left: 42%;border-radius: 3%;background-color: transparent; border: 2px solid;" onclick = "closeNav()" href="#">check completed</button>
+          <button style = "margin-left: 42%;border-radius: 3%;background-color: transparent; border: 2px solid;" onclick = "closeNav()" href="#">Scan NFC</button>
       </div>
     </div>
 
@@ -197,7 +197,7 @@
         </div>
         <div class = "w3-col w3-shadow card" id = "5" style = "margin-top: -1%;width: 31%; height: 94%;"> <!-- The third column of the second row -->
         <div class = "front" style = "background: rgba(52, 73, 94, 0.8); width: 95%; height: 95%;">
-          <h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: right; margin-top: 0; margin-right: 3%;color: white;">DIAGNOSTIC</h2> <!--Name of Operation: Diagnostic -->
+          <h2 style = "font-size: 48px;font-family: 'Cabin', sans-serif; float: right; margin-top: 0; margin-right: 3%;color: white;">INJECTION</h2> <!--Name of Operation: Diagnostic -->
           <img src = "img/tPhone.png" style = "width: 100px; height: 100px;margin-top: 200px; margin-left: 75%;font-size: 48px; color: #ffffff" class="callB" id = "5" onclick = "openNav(6)">
         </div>
         <div class = "back" style = "width: 95%; height: 95%;background: rgba(52, 73, 94, 0.8);">
