--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -15,8 +15,6 @@
 
     <body>
         <div id="mySidebar" class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left">
-
-            <!-- <button class="btn btn-danger btn-xs" type="button" onclick="w3_close()">X</button> <br/> -->
             
             <div id="links" class="w3-bar w3-white">
                 <a href="register.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a>
@@ -83,11 +81,30 @@
             <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;" />
             <div id="action-control-area">
 
-            </div>
+            </div> <!-- end of action-control-area div -->
+
+            <div id="update-flag-color">
+                <div id="update-flag-popupContact">
+                    <div id = "update-flag-newWindow" class = "animated zoomIn">
+
+                        <div id = "wrapper">
+                            <button id = "update-flag-button-close">X</button>
+                            <img src="img/optum.png" alt="optum"><br>
+                            <h1>Update Action Flag Color</h1>
+                        </div> <!-- end of wrapper div -->
+                        <hr>
+
+                        <p id="update-flag-p">Please choose from the available color from below:</p>
+
+                        <div id="available-color">
+
+                        </div> <!-- end of available-color div -->
+
+                    </div> <!-- end of update-flag-newWindow div -->
+                </div> <!-- end of update-flag-popupContact -->
+            </div> <!-- update-flag_color -->
 
         </div> <!-- end of mainContent -->
-
-
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
