--- a/backend/SampleConnection/connect.html
+++ b/backend/SampleConnection/connect.html
@@ -1,10 +1,20 @@
 <html>
   <head>
     <style>
+       .question{
+      margin-top: 400px;
+      margin-left: 400px;
+    }
+ 
+
+    .button{
+      margin-top:450px;
+    }
+
     </style>
   </head>
   <body>
-    <script  src="backend/SampleConnection/jquery" type="text/javascript"></script>
+    <script  src="jquery.js" type="text/javascript"></script>
     <h1>TIME TO TEST THIS CONNECTION</h1>
     <h2>These are my list of friends</h2>
     <ul id = "friends">
@@ -12,7 +22,46 @@
     <button id = "see">See my friends!</button>
     <p>Please input a new friend! <input type = "text" id = "name"></p>
     <button id = "add">Add my friend!</button>
-    <script>
+
+     </head>
+
+    <div class="question">
+        How would rate your experience here?
+    </div>
+    <button class="button" style="margin-left:400px;"id="1">1</button>
+    <button class="button" id="2" style="margin-left:420px;">2</button>
+    <button class="button" id="3" style="margin-left:440px;">3</button>
+    <button class="button" id="4" style="margin-left:460px;">4</button>
+    <button class="button" id="5" style="margin-left:480px;">5</button>
+    <button class="button" id="6" style="margin-left:500px;">6</button>
+    <button class="button" id="7" style="margin-left:520px;">7</button>
+    <button class="button" id="8" style="margin-left:540px;">8</button>
+    <button class="button" id="9" style="margin-left:560px;">9</button>
+    <button class="button" id="10" style="margin-left:580px;">10</button>
+
+
+<script>
+  $(".button").click(function(){
+    var rating= $(this).attr("id");
+    console.log(rating);
+     var today = new Date();
+	  today= today.toISOString().substring(0, 10);
+
+
+$.ajax({
+    type: "POST",
+    crossDomain: true,
+    url: "http://applicationDashboard.us-east-1.elasticbeanstalk.com/general/insert/Survey_Activity/1156/"+rating+"/"+today+"/7",
+    success: function (insert_status) {
+        console.log("Successful insertion");
+    },
+    error: function (xhr, status, error) {
+        console.log('Error: ' + error.message);
+    },
+});
+});
+
+
 
     $('#add').click(function()
     {
