--- a/backend/SampleConnection/connect.html
+++ b/backend/SampleConnection/connect.html
@@ -51,7 +51,7 @@
 $.ajax({
     type: "POST",
     crossDomain: true,
-    url: "http://applicationDashboard.us-east-1.elasticbeanstalk.com/general/insert/Survey_Activity/1156/"+rating+"/"+today+"/7",
+    url: "http:///portal/average/time/133/2017-05-31/2017-07-31",
     success: function (insert_status) {
         console.log("Successful insertion");
     },
@@ -88,10 +88,10 @@ $.ajax({
     {
   var $friends = $("#friends");
       // //returns a list of providers
-      host='http://optumistics-dev.us-east-1.elasticbeanstalk.com'
+      host='http://applicationDashboard.us-east-1.elasticbeanstalk.com'
        $.ajax({
         type: 'GET',
-        url: host+'/portal/present/providers/active',
+        url: host+"/portal/average/time/133/2017-05-31/2017-07-31",
         contentType: 'application/x-www-form-urlencoded',
         jsonpCallback: 'callback', 
         dataType : 'jsonp',   //you may use jsonp for cross origin request
