--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -17,9 +17,9 @@
         <div id="mySidebar" class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left">
             
             <div id="links" class="w3-bar w3-white">
-                <a href="register.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a>
-                <a href="SettingsPage.html" class="w3-bar-item w3-button w3-padding-16">Settings<i id="nav-icon" class="glyphicon glyphicon-user"></i></a>
-                <a href="neoStats.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a>
+                <a href="register.html" class="w3-bar-item w3-button w3-padding-16">Register<i id="nav-icon" class="glyphicon glyphicon-home"></i></a> <!-- register page html -->
+                <a href="SettingsPage.html" class="w3-bar-item w3-button w3-padding-16">Settings<i id="nav-icon" class="glyphicon glyphicon-user"></i></a> <!-- settings page html -->
+                <a href="neoStats.html" class="w3-bar-item w3-button w3-padding-16">Statistics<i id="nav-icon" class="glyphicon glyphicon-file"></i></a> <!-- neo stats page html -->
             </div> <!-- end of links div -->
 
         </div> <!-- end of mySidebar div -->
@@ -27,61 +27,68 @@
         <div zclass="w3-main" id="main" class = "animated fadeIn">
 
         <div id="topBar">
-            <button id="topBar-button" class="w3-button w3-xlarge">&#9776;</button>
-            <img src="img/optum1.jpg" alt="optum">
+            <button id="topBar-button" class="w3-button w3-xlarge">&#9776;</button> <!-- side bar button -->
+            <img src="img/optum1.jpg" alt="optum"> <!-- optum logo on top of the page -->
         </div> <!-- end of topBar div -->
 
         <div id="mainContent">
             <h1>Settings</h1>
             <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;border:0;border-top:2px solid #000;" />
             <br/>
-            <button id="add-flag" class="btn btn-default" type="button">Register Action</button></br>
+            <button id="add-flag" class="btn btn-default" type="button">Register Action</button></br> <!-- register button -->
+
+<!-- ..................................... . POPUP WINDOW FOR REGISTERING ACTION ......................................... -->
 
             <div id="flag-registration">
                 <div id="popupContact">
                     <div id = "newWindow" class = "animated zoomIn">
 
                         <div id = "wrapper">
-                            <button id = "button-close">X</button>
-                            <img src="img/optum.png" alt="optum"><br>
-                            <h1>Action Registration</h1>
+                            <button id = "button-close">X</button> <!-- the close button -->
+                            <img src="img/optum.png" alt="optum"><br> <!-- optum logo -->
+                            <h1>Action Registration</h1> <!-- header -->
                         </div> <!-- end of wrapper div -->
                         <hr>
 
-                        <div id="action">
+                        <div id="action"> <!-- Action Name Input -->
                             <label id="action-name" class="input-label">Action Name:</label>
                             <input id="action-name-input" type="text" placeholder="action name" class="input-box">
                         </div> <!-- end of action div -->
                         <br>
-                        <div id="flag-color">
+
+                        <div id="flag-color"> <!-- Flag Color Input -->
                             <label id="flag-color-name" class="input-label">Flag Color: &nbsp;</label>
-                            <select id="flag-color-dropdown">
+                            <select id="flag-color-dropdown"> <!-- Flag Color Dropdown -->
                             </select>
                             <div id="color-display"></div>
                         </div> <!-- end of flag-color div -->
                         <br>
-                        <div id="button-label">
+
+                        <div id="button-label"> <!-- Button Label Input -->
                             <label id="button-label-name" class="input-label">Button Label:</label>
                             <input id="button-label-input" type="text" placeholder="button label" class="input-box">
                         </div> <!-- end of button-label div -->
                         <br>
-                        <div id="exp-duration">
+
+                        <div id="exp-duration"> <!-- Expected Duration Input -->
                             <label id="exp-duration-name" class="input-label">Expected Duration (in Minutes):</label>
                             <input id="exp-duration-input" type="text" placeholder="0" class="input-box">
                         </div> <!-- end of exp-duration div -->
+
                         <button id = "submitFlag">Submit</button>
 
                     </div> <!--  end of newWindow div -->
                 </div> <!-- end of popupContact div -->
             </div> <!-- end of flag-registration div -->
 
-
+<!-- ...................................... END OF POPUP WINDOW FOR REGISTERING ACTION ......................................... -->
             
             <p id="action-control-p"> Action Control Panel </p>
             <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;" />
-            <div id="action-control-area">
 
-            </div> <!-- end of action-control-area div -->
+            <div id="action-control-area"></div> <!-- end of action-control-area div --> <!-- where updated actions are going to show up -->
+
+<!-- ...................................... POPUP WINDOW FOR UPDATING COLOR FOR AN ACTION ......................................... -->
 
             <div id="update-flag-color">
                 <div id="update-flag-popupContact">
@@ -89,22 +96,22 @@
 
                         <div id = "wrapper">
                             <button id = "update-flag-button-close">X</button>
-                            <img src="img/optum.png" alt="optum"><br>
-                            <h1>Update Action Flag Color</h1>
+                            <img src="img/optum.png" alt="optum"><br> <!-- optum logo -->
+                            <h1>Update Action Flag Color</h1> <!-- header -->
                         </div> <!-- end of wrapper div -->
                         <hr>
 
                         <p id="update-flag-p">Please choose from the available color from below:</p>
 
-                        <div id="available-color">
-
-                        </div> <!-- end of available-color div -->
+                        <div id="available-color"></div> <!-- end of available-color div --> <!-- where all available colors are going to show up -->
 
                     </div> <!-- end of update-flag-newWindow div -->
                 </div> <!-- end of update-flag-popupContact -->
             </div> <!-- update-flag_color -->
 
         </div> <!-- end of mainContent -->
+
+<!-- ...................................... END OF POPUP WINDOW FOR UPDATING COLOR FOR AN ACTION ......................................... -->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
