--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -54,10 +54,11 @@
           <header class="w3-container w3-indigo">
           <h2 style = "text-align: center">COMPREHENSIVE DATA</h2>
         </header></br>
-          <select id="chartType" style = "margin-left: 35%; margin-right: 35%; width: 30%;">
-            <option value="line">average blood draw time per month</option>
-            <option value="line2">average physical time per month</option>
-            <option value = "line3">average appointment time per month</option>
+          <select id="chartType" style = "margin-left: 15%; width: 30%;"> <!--This selection will be providers -->
+            <option value = "line">Providers</option>
+          </select>
+
+          <select id = "operationType" style = "margin-left: 5%;width: 30%;">
           </select>
         <canvas id="myChart" class = "w3-col" style = "margin-left: 1%;width: 95%;height: 77%; padding-bottom: 10px;">
 
@@ -85,7 +86,7 @@
       <div class="w3-row">
         <div class="w3-card-4 w3-col" style="margin-left: 1%;width:60%; height: 36%;">
           <header class="w3-container w3-orange w3-hover-shadow">
-            <h3 style = "color: #fff;text-align: center;">BOJANGLE</h3>
+            <h3 style = "color: #fff;text-align: center;">REAL TIME DATA</h3>
           </header></br>
           <select style = "margin-left: 35%; margin-right: 35%; width: 30%;" id="chartPieType">
             <option value="pie">time distribution spent on each operation</option>
