--- a/data_portal/index.html
+++ b/data_portal/index.html
@@ -76,7 +76,7 @@
                 <p>Please login with your credentials below!</p>
                 <form>
                   Username:<input type="text"/><br/>
-                  Password:<input type="text"/>
+                  Password:<input type="password"/>
                 </form>
                 <a class="btn btn-primary btn-xl" href="register.html">LOGIN</a>
             </div>
