--- a/data_portal/register.html
+++ b/data_portal/register.html
@@ -73,7 +73,7 @@
         <button class="w3-button w3-xlarge" onclick="w3_open()">&#9776;</button>
 
         <!-- displays Optum logo in header -->
-        <img src="optum1.jpg" alt="optum" style="width:250px;height:80px;">
+        <img src="img/optum1.jpg" alt="optum" style="width:250px;height:80px;">
 
       <!-- end of header div -->
       </div>
@@ -96,7 +96,7 @@
     <div id = "newWindow" class = "animated zoomIn">
       <div id = "wrapper">
         <button id = "button-close" onclick ="div_hidex()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
-        <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+        <img src="img/optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
         <h1 style = "color: #ffffff; text-align: center;">start appointment</h1>
       <!-- end of header div -->
       </div>
@@ -186,7 +186,7 @@
       <!-- exit button on the popup window -->
       <button id = "button-close" onclick ="hide_divx()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
       <!-- header -->
-      <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+      <img src="img/optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
       <h1 style = "color: #ffffff; text-align: center;">provider registration</h1>
 
     <!-- end of header div -->
@@ -268,7 +268,7 @@
     <!-- 'x' button for popup -->
     <button id = "button-close" onclick ="hide_nfcx()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
     <!-- popup header -->
-    <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+    <img src="img/optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
     <h1 style = "color: #ffffff; text-align: center;">provider NFC registration</h1>
     <!-- end of popup header -->
   </div>
@@ -320,7 +320,7 @@
     <!-- popup close button -->
     <button id = "button-close" onclick ="hide_apptx()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
     <!-- popup header -->
-    <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+    <img src="img/optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
     <h1 style = "color: #ffffff; text-align: center;">new appointment</h1>
   <!-- end of popup header div -->
   </div>
@@ -464,7 +464,7 @@
     <!-- popup close button -->
     <button id = "button-close" onclick ="hide_divx5()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
     <!-- popup header -->
-    <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
+    <img src="img/optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
     <h1 style = "color: #ffffff; text-align: center;">patient registration</h1>
   <!-- end of popup header -->
   </div>
