linked landing page

--- a/data_portal/landingpage.html
+++ b/data_portal/landingpage.html
@@ -243,7 +243,7 @@
 
 
 <div class="logo">
-    <img src="optum.png" alt="optum" style="width:250px;height:80px;float:left;">
+    <img src="img/optum.png" alt="optum" style="width:250px;height:80px;float:left;">
   </div>
     <div class="main-content">
 
@@ -279,7 +279,7 @@
         <p style = "margin-left: 7%; color: #ffffff; font-size: 24px; font-family:'Raleway',sans-serif;">Please scan the patient's NFC card on the scanner if applicable</p>
         <br/>
         <div>
-        <button id="assign-NFC"><a style="margin-left: -4px;color:white; font-family:'Raleway',sans-serif; font-size: 20px; padding-top: 25px; padding-bottom: 25px; padding-left: 25px; padding-right: 27px;" href="nightDash.HTML" class="input-box">proceed</a></button>
+        <button id="assign-NFC"><a style="margin-left: -4px;color:white; font-family:'Raleway',sans-serif; font-size: 20px; padding-top: 25px; padding-bottom: 25px; padding-left: 25px; padding-right: 27px;" href="dayDash.HTML" class="input-box">proceed</a></button>
       </div>
       </div>
     </div>
