changes to the data portal

--- a/data_portal/neoStats.html
+++ b/data_portal/neoStats.html
@@ -55,10 +55,11 @@
           <h2 style = "text-align: center">COMPREHENSIVE DATA</h2>
         </header></br>
           <select id="chartType" style = "margin-left: 15%; width: 30%;"> <!--This selection will be providers -->
-            <option value = "line">Providers</option>
+            <option>Providers</option>
           </select>
 
           <select id = "operationType" style = "margin-left: 5%;width: 30%;">
+            <option value = "line">Operations</option>
           </select>
         <canvas id="myChart" class = "w3-col" style = "margin-left: 1%;width: 95%;height: 77%; padding-bottom: 10px;">
 
