--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -40,7 +40,9 @@
             <p id="action-control-p"> Action Control Panel </p>
             <hr style="margin:5px 5px; margin-left: 35%; margin-right: 35%;" />
 
-            <div id="action-control-area"></div> <!-- end of action-control-area div --> <!-- where updated actions are going to show up -->
+            <div class="container-fluid">
+            <div class="row" id="action-control-area"></div> <!-- end of action-control-area div --> <!-- where updated actions are going to show up -->
+            </div>
 
 
         </div> <!-- end of mainContent -->
