--- a/data_portal/SettingsPage.html
+++ b/data_portal/SettingsPage.html
@@ -109,8 +109,10 @@
 
                         <p id="update-flag-p">Please choose from the available color from below:</p>
 
+                        <div class="container-fluid">
                         <div id="available-color"></div> <!-- end of available-color div --> <!-- where all available colors are going to show up -->
-
+                        </div>
+                        
                     </div> <!-- end of update-flag-newWindow div -->
                 </div> <!-- end of update-flag-popupContact -->
             </div> <!-- update-flag_color -->
