--- a/dashboard/dayDash.html
+++ b/dashboard/dayDash.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src = "jquery.js"></script>
+  <script src = "backend/SampleConnection/jquery"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 
